--- a/MauiTankkausApp/MainPage.xaml
+++ b/MauiTankkausApp/MainPage.xaml
@@ -3,74 +3,64 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiTankkausApp.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout>
-            <Frame HorizontalOptions="Fill" Padding="10" BackgroundColor="Black">
-                <Label Text="TankkausApp" HorizontalTextAlignment="Center" FontSize="28" TextColor="White"></Label>
-            </Frame>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-            <Image Source="opel.jpg" />
+        <Frame Grid.Row="0" HorizontalOptions="Fill" Padding="10" BackgroundColor="Black">
+            <Label Text="TankkausApp" HorizontalTextAlignment="Center" FontSize="28" TextColor="White" />
+        </Frame>
 
-            <StackLayout Padding="30,15">
-                <Entry x:Name="inputKentta1" Placeholder="Rekisterinumero" />
-                <Entry x:Name="inputKentta2" Placeholder="Ajokilometrit" />
-                <Entry x:Name="inputKentta3" Placeholder="Litraa" />
-                <Entry x:Name="inputKentta4" Placeholder="Euroa" />
-                <Button x:Name="Lisaa" BackgroundColor="Black" TextColor="White" FontSize="18" Text="Lisää" HorizontalOptions="Fill" Clicked="Lisaa_Clicked"></Button>
-            </StackLayout>
+        <ScrollView Grid.Row="1">
+            <VerticalStackLayout>
+                <Image Source="opel.jpg" />
 
-            <Label Text="Viimeisimmät tankkaukset:" TextColor="Black" HorizontalOptions="Center" FontSize="20"></Label>
+                <StackLayout Padding="30,15">
+                    <Entry x:Name="inputKentta1" Placeholder="Rekisterinumero" />
+                    <Entry x:Name="inputKentta2" Placeholder="Ajokilometrit" />
+                    <Entry x:Name="inputKentta3" Placeholder="Litraa" />
+                    <Entry x:Name="inputKentta4" Placeholder="Euroa" />
+                    <Button x:Name="Lisaa" BackgroundColor="Black" TextColor="White" FontSize="18" Text="Lisää" HorizontalOptions="Fill" Clicked="Lisaa_Clicked" />
+                </StackLayout>
 
-            <Label x:Name="tanklataus" HorizontalOptions="Center"></Label>
+                <Label Text="Viimeisimmät tankkaukset:" TextColor="Black" HorizontalOptions="Center" FontSize="20" />
 
-            <ListView x:Name="tankList" SelectionMode="Single" Margin="20, 0">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
+                <Label x:Name="tanklataus" HorizontalOptions="Center" />
 
-                            <ContentView Padding="3">
-                                <Frame Padding="2">
+                <ListView x:Name="tankList" SelectionMode="Single" Margin="20, 0">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <ContentView Padding="3">
+                                    <Frame Padding="2">
+                                        <StackLayout Orientation="Horizontal" Padding="0, 2">
+                                            <Label Text="{Binding Rekisterinumero}" TextColor="Black" FontSize="16" VerticalOptions="StartAndExpand" Margin="5, 0, 0, 0" />
+                                            <Label Text=" |" TextColor="Black" FontSize="18" />
 
-                                    <StackLayout Orientation="Horizontal" Padding="0, 2">
+                                            <Label Text="{Binding Ajokilometrit}" TextColor="Black" FontSize="16" VerticalOptions="StartAndExpand" Margin="5, 0, 0, 0" />
+                                            <Label Text=" km |" TextColor="Black" FontSize="18" />
 
-                                        <Label Text="{Binding Rekisterinumero}"
-                                        TextColor="Black"
-                                        FontSize="16"
-                                        VerticalOptions="StartAndExpand" 
-                                        Margin="5, 0, 0, 0"/>
-                                        <Label Text=" |" TextColor="Black" FontSize="18"/>
+                                            <Label Text="{Binding Litraa}" TextColor="Black" FontSize="16" VerticalOptions="StartAndExpand" Margin="5, 0, 0, 0" />
+                                            <Label Text=" l |" TextColor="Black" FontSize="18" />
 
-                                        <Label Text="{Binding Ajokilometrit}"
-                                        TextColor="Black"
-                                        FontSize="16"
-                                        VerticalOptions="StartAndExpand"
-                                        Margin="5, 0, 0, 0"/>
-                                        <Label Text=" km |" TextColor="Black" FontSize="18"/>
-
-                                        <Label Text="{Binding Litraa}"
-                                        TextColor="Black"
-                                        FontSize="16"
-                                        VerticalOptions="StartAndExpand"
-                                        Margin="5, 0, 0, 0"/>
-                                        <Label Text=" l |" TextColor="Black" FontSize="18"/>
-
-                                        <Label Text="{Binding Euroa}"
-                                        TextColor="Black"
-                                        FontSize="16"
-                                        VerticalOptions="StartAndExpand"
-                                        HorizontalOptions="Center"
-                                        Margin="5, 0, 0, 0"/>
-                                        <Label Text=" €" TextColor="Black" FontSize="18"/>
-
-                                    </StackLayout>
-                                </Frame>
-                            </ContentView>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-
-        </VerticalStackLayout>
-    </ScrollView>
+                                            <Label Text="{Binding Euroa}" TextColor="Black" FontSize="16" VerticalOptions="StartAndExpand" HorizontalOptions="Center" Margin="5, 0, 0, 0" />
+                                            <Label Text=" €" TextColor="Black" FontSize="18" />
+                                        </StackLayout>
+                                    </Frame>
+                                </ContentView>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </VerticalStackLayout>
+        </ScrollView>
+        <StackLayout Grid.Row="2" Orientation="Horizontal" HorizontalOptions="Fill" Padding="10" BackgroundColor="Black">
+            <Button BackgroundColor="Black" Text="Etusivu" TextColor="White" HorizontalOptions="FillAndExpand"/>
+            <Button BackgroundColor="Black" Text="Tankkauksiin" TextColor="White" HorizontalOptions="FillAndExpand"/>
+        </StackLayout>
+    </Grid>
 
 </ContentPage>
