Luotu kaksi uutta sivua ja testattu buttonien toimivuus niille ja etusivulle takaisin.

--- a/MauiTankkausApp/MainPage.xaml
+++ b/MauiTankkausApp/MainPage.xaml
@@ -21,7 +21,7 @@
                     <Label Text="Valitse rekisterinumerosi:"/>
                     <Picker x:Name="rekPicker"/>
                     <Label Text="TAI" Padding="0,8,0,10" FontSize="Medium" FontAttributes="Bold" HorizontalOptions="Center"/>
-                    <Button x:Name="LisaaRek" BackgroundColor="Black" Text="Lisää rekisterinumerosi"/>
+                    <Button x:Name="LisaaRek" BackgroundColor="Black" Text="Lisää rekisterinumerosi" Clicked="LisaaRek_Clicked" />
                     <Image Source="ooppel.jpg" />
 
                     <StackLayout x:Name="Tiedot" IsVisible="False">
@@ -65,7 +65,7 @@
             </VerticalStackLayout>
         </ScrollView>
         <StackLayout Grid.Row="2" Orientation="Horizontal" HorizontalOptions="Fill" Padding="10" BackgroundColor="Black">
-            <Button x:Name="LisaaButton"  BackgroundColor="Black" ImageSource="plus" HeightRequest="40" HorizontalOptions="FillAndExpand"/>
+            <Button x:Name="LisaaButton"  BackgroundColor="Black" ImageSource="plus" HeightRequest="40" HorizontalOptions="FillAndExpand" Clicked="LisaaButton_Clicked" />
             <Button x:Name="EtusivuButton"  BackgroundColor="Black" ImageSource="house" HeightRequest="40" HorizontalOptions="FillAndExpand" Clicked="EtusivuButton_Clicked"/>
             <Button x:Name="TankkausButton" BackgroundColor="Black" ImageSource="gaspump" HeightRequest="40" HorizontalOptions="FillAndExpand" Clicked="TankkausButton_Clicked"/>
         </StackLayout>
