Tehty lisäys ja testattu LisääRekNroPage. Toimii!

--- a/MauiTankkausApp/LisaaRekisteriNroPage.xaml
+++ b/MauiTankkausApp/LisaaRekisteriNroPage.xaml
@@ -14,11 +14,16 @@
             <Label Text="TankkausApp" HorizontalTextAlignment="Center" FontSize="28" TextColor="White" />
         </Frame>
 
-        <StackLayout Grid.Row="1">
-            <Label>Lisää RekNro sivu</Label>
+        <StackLayout Grid.Row="1" Padding="30,15">
+            <Label Padding="0,5" Text="Lisää rekisterinumerosi" FontSize="Medium"/>
+            <Entry x:Name="RekNroKentta" Placeholder="Rekisterinumero"/>
+            <Entry x:Name="MerkkiKentta" Placeholder="Merkki"/>
+            <Entry x:Name="MalliKentta" Placeholder="Malli"/>
+            <Button x:Name="TallennaButton" BackgroundColor="Black" Text="Tallenna" Clicked="TallennaButton_Clicked" />
         </StackLayout>
 
         <StackLayout Grid.Row="2" Orientation="Horizontal" HorizontalOptions="Fill" Padding="10" BackgroundColor="Black">
+            <Button x:Name="TakaisinButton" BackgroundColor="Black" ImageSource="back" HeightRequest="40" HorizontalOptions="FillAndExpand" Clicked="TakaisinButton_Clicked"/>
             <Button x:Name="EtusivuButton"  BackgroundColor="Black" ImageSource="house" HeightRequest="40" HorizontalOptions="FillAndExpand" Clicked="EtusivuButton_Clicked"/>
         </StackLayout>
     </Grid>
